# vertex-cli

./: .env.example  AGENTS.md  PLAN.md  README.md  pyproject.toml
cli/: __init__.py  entrypoints.py  remote_proxy.py  setup_wizard.py  token_watchdog.py
scripts/: apply-vertex-cli-patches.sh  apply-vertex-theme.sh  install-vertex.sh
tests/: conftest.py
tests/cli/: test_cli.py  test_cli_ownership.py  test_entrypoints.py  test_vertex_cli_effort_patch.py  test_vertex_cli_version.py
tests/contracts/: test_architecture_contracts.py  test_feature_manifest.py  test_import_boundaries.py  test_smoke_config.py
vertex_auth/: __init__.py  client.py
