[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertex-cli"
version = "1.2.6"
description = "Vertex CLI — conecte-se ao proxy DeepSeek remoto"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["deepseek", "vertex", "cli"]
license = { text = "MIT" }
authors = [
    { name = "Vertex Contributors", email = "alvaro209890@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
]

[project.urls]
Homepage = "https://github.com/alvaro209890/vertex-cli"
Repository = "https://github.com/alvaro209890/vertex-cli.git"
Issues = "https://github.com/alvaro209890/vertex-cli/issues"

[project.scripts]
vertex = "cli.entrypoints:cli"

[tool.hatch.build.targets.wheel]
packages = ["cli", "vertex_auth"]

[tool.hatch.build.targets.wheel.force-include]
".env.example" = "cli/env.example"
"vendor/vertex-cli" = "vendor/vertex-cli"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.32",
    "ruff>=0.15.12",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes (undefined names, unused imports)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise syntax for target Python version)
    "B",    # flake8-bugbear (common bugs and anti-patterns)
    "C4",   # flake8-comprehensions (idiomatic comprehensions)
    "SIM",  # flake8-simplify (simplifiable code patterns)
    "PERF", # Perflint (performance anti-patterns)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long — enforced by the formatter instead
    "RUF006",  # fire-and-forget tasks intentionally not awaited
]

[tool.ruff.lint.isort]
known-first-party = ["cli", "vertex_auth"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "cli: CLI integration checks",
    "contract: deterministic feature contract checks",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.analysis]
allowed-unresolved-imports = []
